# TaskQueue

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PHASE1_CODE_REVIEW_v2.md  README.md  pyproject.toml
.github/workflows/: base.yaml  ci.yaml
examples/: base.py  define_tasks.py  main_example.py
src/TaskQueue/: __init__.py  handle.py  job.py  queue.py  task.py  worker.py
src/TaskQueue/backends/: interface.py  memory.py  serializer.py
tests/: conftest.py  test_backend_protocol.py  test_base.py  test_concurrency.py  test_decorator.py  test_imports.py  test_job.py  test_job_handle.py  test_memory_backend.py  test_scaffolding.py  test_serialization.py  test_task.py  test_typing.py  test_version.py  test_worker.py
