[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TaskQueue"
version = "0.0.0"
description = "A distributed async task queue with structured concurrency and end-to-end type safety."
authors = [
  { name="Amit Madhala", email="amitmadhala@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.13",
    "tomli>=2.4.1",
    "pre-commit>=3.6",
    "fakeredis>=2.20",
    "redis>=5.0",
]

# ruff setup
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "B",        # Flake8-bugbear
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "TCH",      # type-checking imports
]

# pyright
[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

# pytest
[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
source = ["src/TaskQueue"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]






